--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ notifications:
 language: python
 
 python:
-  - "3.6.2"
+  - "3.6"
 
 before_install:
     - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
     - conda update --yes conda
+    # The next couple lines fix a crash with multiprocessing on Travis and are not specific to using Miniconda
+    - sudo rm -rf /dev/shm
+    - sudo ln -s /run/shm /dev/shm
     - pip install coverage
 
 install:
+    - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose dateutil pandas statsmodels
     - python setup.py install
 
 script: coverage run -m unittest discover epcy/tests/
