--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,11 @@ before_install:
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
     - conda update --yes conda
+    - conda update pip
     - pip install coverage
 
 install:
-    - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose dateutil pandas statsmodels
+    - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pandas statsmodels
     - python setup.py install
 
 script: coverage run -m unittest discover epcy/tests/
