--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
     - pip install coverage
 
 install:
-    - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pandas statsmodels
+    - conda install --yes python=$TRAVIS_PYTHON_VERSION python-dateutil numpy scipy matplotlib pandas statsmodels
     - python setup.py install
 
 script: coverage run -m unittest discover epcy/tests/
