--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,18 @@ __pycache__/
 # Data
 data/small_for_test/*subgroup*
 
+#Doc
+*.html
+doc/_*
+
+#Mac
+.DS_store
+
+#TMP
+tmp
+tmp*
+
+
 # Distribution / packaging
 .Python
 env/
@@ -26,6 +38,7 @@ var/
 *.egg
 # C extensions
 *.so
+*.eggs
 
 # Unit test / coverage reports
 htmlcov/
@@ -34,6 +47,7 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
