--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,4 @@ install:
   scipy matplotlib pandas statsmodels
 - python setup.py install
 script: coverage run -m unittest discover epcy/tests/
-after_success: 
-- bash <(curl -s https://codecov.io/bash)
-- env
+after_success: bash <(curl -s https://codecov.io/bash)
