--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,20 @@ __pycache__/
 
 # Data
 data/small_for_test/*subgroup*
+data/small_leucegene/5_inv16_vs_5_*
+data/small_leucegene/5_inv16_vs_5/*/
+
+#Doc
+*.html
+doc/_build
+
+#Mac
+.DS_store
+
+#TMP
+tmp
+tmp*
+
 
 # Distribution / packaging
 .Python
@@ -26,14 +40,8 @@ var/
 *.egg
 # C extensions
 *.so
+*.eggs
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.cache
-nosetests.xml
-coverage.xml
 # Unit test / coverage reports
 htmlcov/
 .tox/
