--- a/.github/workflows/python-publish-toml.yml
+++ b/.github/workflows/python-publish-toml.yml
@@ -32,5 +32,5 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        pip intall .
+        pip install .
         twine upload dist/*
