--- a/.github/workflows/python-publish-toml.yml
+++ b/.github/workflows/python-publish-toml.yml
@@ -26,12 +26,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel build twine
+        pip install build twine
     - name: Build and publish
       env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_PWD }}
       run: |
-        pip install .
         python3 -m build
         twine upload dist/*
