--- a/.github/workflows/python-publish-toml.yml
+++ b/.github/workflows/python-publish-toml.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build twine
+        pip install build twine setuptools_scm
     - name: Build and publish
       env:
         TWINE_USERNAME: __token__
