--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,8 @@ dependencies = [
     "numexpr>=2.9.0",
     "seaborn>=0.13.2"
 ]
-dynamic=["version"]
+dynamic=["version", "readme"]
 
-readme = "README.rst"
 license = {file = "LICENSE"}
 keywords = ["density", "predictive", "gene", "feature", "KDE"]
 
@@ -63,3 +62,5 @@ epcy = "epcy.epcy:main"
 
 [tool.setuptools_scm]
 
+[tool.setuptools.dynamic]
+readme = {file = ["README.rst"], content-type = "text/x-rst"}
